Add AST-backed Python fixes and Maven test harness